--- a/html/index.html
+++ b/html/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE HTML>
 <!--
-	Fractal by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	Calendyser Main Webpage
 -->
 <html>
 	<head>
-		<title>Fractal by HTML5 UP</title>
+		<title>by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,7 +15,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="content">
-					<h1><a href="#">Fractal</a></h1>
+					<h1><a href="#">Calendyser</a></h1>
 					<p>Just a simple, single page responsive<br />
 					template brought to you by <a href="http://html5up.net">HTML5 UP</a></p>
 					<ul class="actions">
