No bad words plz

--- a/html/index.html
+++ b/html/index.html
@@ -17,7 +17,7 @@
 				<div class="content">
 					<h1><a href="#">Calendyser</a></h1>
 					<p>Just a simple, single page responsive<br />
-					template brought to you by <a href="http://html5up.net">Cal Fuck iser</a></p>
+					template brought to you by <a href="http://html5up.net">Cal- iser</a></p>
 					<ul class="actions">
 						<li><a href="#" class="button primary icon solid fa-download">Download</a></li>
 						<li><a href="#one" class="button icon solid fa-chevron-down scrolly">Learn More</a></li>
